Fix symmetric and spacing issues
left/right section of header were not equal, adjusted to make both sections
meet at the middle. also changed background of login box

--- a/style.css
+++ b/style.css
@@ -31,8 +31,7 @@ body {
     width: 500px;
     height: 330px;
     border: 1px solid #ddd;
-    background: url("https://images.pexels.com/photos/268415/pexels-photo-268415.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
-    background-size: 100%;
+    background-color: white;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
     border-radius: 20px;
 }
@@ -94,14 +93,14 @@ h2 {
     font-size: 11px;
     font-weight: 400;
     font-stretch: normal;
+    line-height: 35px;
     font-style: normal;
-    line-height: 1.27;
     letter-spacing: 1px;
     color: #fff;
     text-transform: uppercase;
 }
 
-.right-footer {
+.contact-form {
     flex: 1;
     background-color: #EA0606;
 }
